<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context="com.fstravassos.sirast.master.CreateAccountActivity">

    <TextView
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_email"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/et_number"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/bt_save"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_shape"
        android:text="@string/save"/>

</LinearLayout>
