<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_slave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#E52D2D"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:text="Adicionar aparelho"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/textView2" />

        <LinearLayout
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_apelido"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/nick_name" />

            <EditText
                android:id="@+id/numero"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/number"
                android:inputType="number" />

            <Button
                android:id="@+id/bt_add"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/add" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/progress" />

    </LinearLayout>




</FrameLayout>
